2009-07-06  Ben Elliston  <bje@gnu.org>

	* configure.ac: Check for docbook2x-texi.
	* configure: Regenerate.

2009-07-06  Ben Elliston  <bje@gnu.org>

	From Reuben Thomas  <rrt@sc3d.org>:
	* doc/runtest.1: Fix some formatting issues.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* Makefile.am (rpm, deb, solpkg, hpdepot): Remove targets.
	* Makefile.in: Regenerate.
	* packaging: Remove directory and its contents.

2009-06-10  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/gdb-comm.exp (gdb_comm_add_breakpoint): Handle pending
	breakpoints.

2008-12-03  Ben Elliston  <bje@gnu.org>

	* COPYING: Update to GPL version 3.

2008-04-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/ref.xml, doc/user.xml: Fix typos.
	* doc/dejagnu.texi: Regenerate.

2008-04-06  Daniel Jacobowitz  <drow@false.org>

	* Makefile.am (RUNTESTDEFAULTFLAGS): Add RUNTEST=$(RUNTEST).
	* Makefile.in: Regenerate.
	* dejagnu.exp (host_execute): Improve regexp matching.
	* testsuite/libdejagnu/unit.cc: C++ fixes.

2008-04-06  Daniel Jacobowitz  <drow@false.org>

	* lib/utils.exp (diff): Open both files as binary.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* dejagnu.h (totals): Correct typos.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/user.xml (Adding a New Tool, Adding a New Target): Fix typos.
	* doc/dejagnu.texi: Regenerate.

2008-02-25  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Update date of last revision.

2008-02-11  Hans-Peter Nilsson  <hp@axis.com>

	* baseboards/h8300.exp: Use -- before switch argument that may
	begin with "-".
	* baseboards/cris-sim.exp: Ditto.

2008-02-11  Hans-Peter Nilsson  <hp@axis.com>

	* Makefile.am (baseboard_SCRIPTS): Add scripts cris-sim.exp,
	iq2000-sim.exp and m32r-linux-sim.exp.
	* Makefile.in: Regenerate.

2008-02-08  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Fix MS-DOS line termination.